# Poker

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
src/: Experiments.cpp  Experiments.hpp  dyn_struct.cpp  dyn_struct.hpp  poker.cpp  poker.hpp  utility.cpp  utility.hpp  xstd.hpp
src/Entry/: Main.cpp
src/Extensions/: imgui_ext.cpp
src/IA/: Genome.cpp  Genome.hpp  Network.cpp  Network.hpp  Population.cpp  Population.hpp
src/OS/: file.hpp
src/OS/Windows/: file.cpp
src/Profiler/: Timer.cpp  Timer.hpp  Tracer.hpp
src/Random/: Random.hpp
